--- a/index.html
+++ b/index.html
@@ -23,9 +23,15 @@ created by Tolga Olcay 2024
 
   <body>
 
-    <header>
-      <h1>nobleware softworks</h1>
-    </header>
+    <div class="navbar">
+
+      
+      <header>
+        <h1>nobleware softworks</h1>
+      </header>
+
+
+    </div>
     
     <main class="hidden">
       <div id="container3D"></div>
