--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ created by Tolga Olcay 2024
 
 
       <header>
-        <h1>nobleware softworks</h1>
+        <h1>Nobleware Softworks</h1>
       </header>
 
 
