--- a/index.html
+++ b/index.html
@@ -66,6 +66,22 @@ created by Tolga Olcay 2024
       </div>
     </div>
 
+    <div class="mobileWrap">   
+      <div class="mobileBox">
+
+      </div>
+
+      <div class="mobileBox hidden">
+        
+      </div>
+
+      <div class="mobileBox hidden">
+        
+      </div>
+
+
+    </div>
+
     </section>
 
     <section class="hidden">
