--- a/index.html
+++ b/index.html
@@ -68,11 +68,20 @@ created by Tolga Olcay 2024
 
     <div class="mobileWrap">   
       <div class="mobileBox">
+        <h3>About Us</h3>
+
+        <p>As the top software solution company for local businesses in the lower mainland, we aim to assist in the seamless intergration of technology for local businesses in British Columbia.
+          Nobleware Softworks has a strong standing in creating meaningful relationships with local businesses, and tackling their problems with software solutions that improve business preformance and productivity.
+        </p>
 
       </div>
 
       <div class="mobileBox hidden">
+        <h3>Our Services</h3>
         
+        <p>As the top software solution company for local businesses in the lower mainland, we aim to assist in the seamless intergration of technology for local businesses in British Columbia.
+          Nobleware Softworks has a strong standing in creating meaningful relationships with local businesses, and tackling their problems with software solutions that improve business preformance and productivity.
+        </p>
       </div>
 
       <div class="mobileBox hidden">
