--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ created by Tolga Olcay 2024
       <div class="mobileBox">
         <h3>About Us</h3>
 
-        <p>As the top software solution company for local businesses in the lower mainland, we aim to assist in the seamless intergration of technology for local businesses in British Columbia.
+        <p>As the top software solution company for local businesses in Vancouver, we aim to assist in the seamless intergration of technology for local businesses in the Fraser Valley.
           Nobleware Softworks has a strong standing in creating meaningful relationships with local businesses, and tackling their problems with software solutions that improve business preformance and productivity.
         </p>
 
@@ -78,16 +78,18 @@ created by Tolga Olcay 2024
 
       <div class="mobileBox hidden">
         <h3>Our Services</h3>
-        
-        <p>As the top software solution company for local businesses in the lower mainland, we aim to assist in the seamless intergration of technology for local businesses in British Columbia.
-          Nobleware Softworks has a strong standing in creating meaningful relationships with local businesses, and tackling their problems with software solutions that improve business preformance and productivity.
+
+        <p>
+          blablablbalbalblab
         </p>
       </div>
 
       <div class="mobileBox hidden">
-        
+        <h3>Book NoW!</h3>
+        <p>
+          blablablbalbalblab
+        </p>
       </div>
-
 
     </div>
 
