--- a/index.html
+++ b/index.html
@@ -45,24 +45,21 @@ created by Tolga Olcay 2024
         <p>As the top software solution company for local businesses in the lower mainland, we aim to assist in the seamless intergration of technology for local businesses in British Columbia.
           Nobleware Softworks has a strong standing in creating meaningful relationships with local businesses, and tackling their problems with software solutions that improve business preformance and productivity.
         </p>
-
-        <p><br><br><br>click to view more</p>
       </div>
 
       <div class="box">
         <h3>Our Services</h3>
         <p>
           App Development - creating a custom app tailored to tackle the bottlenecks within your business pipeline
-          <br><br>SEO - increase impressions by 400%, improve google ranking for your business, Growth
+          <br><br>SEO - increase impressions by 400%, improve google ranking for your business, Growth, Online web presance
           <br><br>Website Development - Our team of expert web developpers and IT proffessionals will create a website for your business that is modern and professional.
         </p>
-        <p>click to view more</p>
       </div>
       
       <div class="box">
         <h3>Book Now</h3>
         <p>Schedule a Free Consultation! To better understand your needs etc</p>
-        <p><br><br><br><br><br><br><br><br><br><br><br>click to view more</p>
+  
       </div>
     </div>
 
