--- a/index.html
+++ b/index.html
@@ -37,6 +37,25 @@ created by Tolga Olcay 2024
       <div id="container3D"></div>
     </main>
 
+    <section class="hidden generalsec">
+      <div class ="general">
+        <p>image</p>
+
+        <div class="generalText">
+          <h3>Partnering with Buisinesses</h3>
+          <p>bla bla bla</p>
+          <p>bla bla bla</p>
+
+            <div class ="generalButtons">
+              <button>Button1</button>
+              <button>Button2</button>
+            </div>
+
+        </div>
+      </div>
+
+    </section>
+
     <section class="hidden">
 
       <div class="wrapper">
