--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ created by Tolga Olcay 2024
         <p>image</p>
 
         <div class="generalText">
-          <h3>Partnering with Buisinesses</h3>
+          <h3>Partnering with your Buisiness</h3>
           <p>bla bla bla</p>
           <p>bla bla bla</p>
 
