--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@ created by Tolga Olcay 2024
       </div>
     </div>
 
-    <div class="mobileWrap">   
+    <div class="mobileWrap"> 
+      <section>
       <div class="mobileBox">
         <h3>About Us</h3>
 
@@ -106,6 +107,7 @@ created by Tolga Olcay 2024
           blablablbalbalblab
         </p>
       </div>
+      </section>  
 
     </div>
 
