--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@ created by Tolga Olcay 2024
       </div>
     </div>
 
+
     <div class="mobileWrap"> 
-      <section>
       <div class="mobileBox">
         <h3>About Us</h3>
 
@@ -106,14 +106,13 @@ created by Tolga Olcay 2024
         <p>
           blablablbalbalblab
         </p>
-      </div>
-      </section>  
+      </div> 
 
     </div>
 
     </section>
 
-    <section class="hidden">
+    <section class="hidden mobileTest">
       <h1>Testimonials</h1>
       <p>Runstar Logo</p>
       <p>Runstar Moving Services</p>
