--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@ created by Tolga Olcay 2024
         <h1>Nobleware Softworks</h1>
       </header>
 
+      <div class="drop">
+        <button id="close-sidebar-button" onclick="closeSidebar()" aria-label="close sidebar"><img src='logo1.png'></button>
+      </div>
+      <ul>
+        <li class="home-li"><a class="active-link" aria-current="page" href="index.html">Home</a></li>
+        <li><a href="index.html">About</a></li>
+        <li><a href="index.html">Services</a></li>
+        <li><a class="accent-link" href="index.html">Book Now</a></li>
+      </ul>
 
     </div>
     
