--- a/book.html
+++ b/book.html
@@ -46,11 +46,11 @@ created by Tolga Olcay 2024
       </div>
 
     </div>
-    
-    <h2>Book Now</h2>
+    <div class="otherpage">
+    <h1>Book Now</h1>
 
     <br><br><br><br><br><br><br>
-    
+    </div>
   </body>
 
   <footer>
