--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@ created by Tolga Olcay 2024
           
 
             <div class ="generalButtons">
-              <button >Learn More</button>
-              <button style="color: #ffd255; font-size:large; border: 3px solid #ffd255;">Get Started</button>
+              <button onclick="location.href='services.html'">Learn More</button>
+              <button onclick="location.href='book.html'" style="color: #ffd255; font-size:large; border: 3px solid #ffd255;">Get Started</button>
             </div>
 
         </div>
