--- a/index.html
+++ b/index.html
@@ -118,19 +118,19 @@ created by Tolga Olcay 2024
       
 
       <div class="mobileBox">
-        <h3>About Us</h3>
+        <h3>Our Services</h3>
 
-        <p>As the top software solution company for local businesses in Vancouver, we aim to assist in the seamless intergration of technology for local businesses in the Fraser Valley.
-          Nobleware Softworks has a strong standing in creating meaningful relationships with local businesses, and tackling their problems with software solutions that improve business preformance and productivity.
+        <p>App Development - creating a custom app tailored to tackle the bottlenecks within your business pipeline
+          <br><br>SEO - increase impressions by 400%, improve google ranking for your business, Growth, Online web presance
+          <br><br>Website Development - Our team of expert web developpers and IT proffessionals will create a website for your business that is modern and professional.
         </p>
 
       </div>
 
       <div class="mobileBox">
-        <h3>About Us</h3>
+        <h3>Book Now</h3>
 
-        <p>As the top software solution company for local businesses in Vancouver, we aim to assist in the seamless intergration of technology for local businesses in the Fraser Valley.
-          Nobleware Softworks has a strong standing in creating meaningful relationships with local businesses, and tackling their problems with software solutions that improve business preformance and productivity.
+        <p>Schedule a Free Consultation! To better understand your needs etc
         </p>
 
       </div>
@@ -157,8 +157,9 @@ created by Tolga Olcay 2024
     <section class="hidden">
       
       <h1>Founder</h1>
-      <p>*Picture of tolga*</p>
-      <p>Tolga Olcay - Chief Executive Officer</p>
+      <img class="portrait" src="../portrait.png">
+      <p>Tolga Olcay</p>
+      <p>Chief Executive Officer</p>
       <p>small paragraph: years of experience, strong standing, WhiteRock Local etc blablabla</p>
     </section>
 
