--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ created by Tolga Olcay 2024
         </p>
 
         <div class ="generalButtons">
-          <button onclick="location.href='about.html'" style="margin-left: -2em;">Learn More</button>
+          <button onclick="location.href='about.html'" style="margin-left: -2em;">Learn More ⮞</button>
         </div>
         
         <br>
@@ -140,7 +140,7 @@ created by Tolga Olcay 2024
           <br><br><span style=" font-weight: 800">Web Development:</span> Creating, maintaining, or updating stunning websites that are mordern and professional.
         </p>
         <div class ="generalButtons">
-          <button onclick="location.href='services.html'" style="margin-left: -2em;">Learn More</button>
+          <button onclick="location.href='services.html'" style="margin-left: -2em;">Learn More ⮞</button>
         </div>
         <br>
       </div>
@@ -155,7 +155,7 @@ created by Tolga Olcay 2024
           <br><br>3. <span style="color: #ffffff; font-weight: 800">Deployment</span><br> Our team of professional developpers will be hard at work creating and deploying your project, and providing updates along the way.
         </p>
         <div class ="generalButtons">
-          <button onclick="location.href='book.html'" style="color: #ffd255; font-size:large; border: 3px solid #ffd255; margin-left: -2em;">Book Now</button>
+          <button onclick="location.href='book.html'" style="color: #ffd255; font-size:large; border: 3px solid #ffd255; margin-left: -2em;">Book Now ⮞</button>
         </div>
         <br>
       </div>
