--- a/book.html
+++ b/book.html
@@ -49,7 +49,35 @@ created by Tolga Olcay 2024
     <div class="otherpage">
     <h1>Book Now</h1>
 
-    <br><br><br><br><br><br><br>
+    <p>Booking a consultation allows us to understand the specific needs for your business, and tailor a solution to meet your goals.
+      <br>Our consultations are <span style="font-weight: 800;">100% FREE</span> 
+    </p>
+
+    <div class="bookContainer">
+
+      <form action="" class = "container">
+        <h2>Get in touch</h2>
+        <p>We will get back to promptly.</p>
+
+        <hr>
+        <label>Name</label>
+        <input type="text" name="name" placeholder="Your Name" class="contact-input" required>
+        <label>Email</label>
+        <input type="email" name="email" placeholder="example@gmail.com" class="contact-input" required>
+        <label>Phone</label>
+        <input type="tel" name="phone" placeholder="(555)-555-5555" class="contact-input" required>
+        <label>Other</label>
+        <textarea name="other" placeholder="Other details... (Optional)" class="contact-input other"></textarea>
+        
+        <hr> 
+
+        <button type="submit">Submit</button>
+
+
+      </form>
+    </div>
+
+    <br><br><br>
     </div>
   </body>
 
