--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ created by Tolga Olcay 2024
           Getting started is as simple as <span style="font-weight: 800">1 - 2 -3</span>
           <br><br>1. <span style="color: #ffffff; font-weight: 800">Get in Touch</span><br>Book a <span style="font-weight: 800">Free</span> consultation today!
           <br><br>2. <span style="color: #ffffff; font-weight: 800">Consultation</span><br>Allow us to learn about your business needs so we can engineer a solution that best fits your goals.
-          <br><br>3. <span style="color: #ffffff; font-weight: 800">Deployment</span><br> Our team of professional developpers will be hard at work creating and deploying your project, and providing updates along the way.
+          <br><br>3. <span style="color: #ffffff; font-weight: 800">Deployment</span><br> Our team of professional developpers will be hard at work creating and deploying your solution, and providing updates along the way.
         </p>
   
       </a>
@@ -150,9 +150,9 @@ created by Tolga Olcay 2024
         <h3>Getting started is as simple as <br>1-2-3!</h3>
 
         <p>
-          1. <span style="color: #ffffff; font-weight: 800">Get in Touch</span><br>Book a <span style="font-weight: 800">Free</span> consultation today!
-          <br><br>2. <span style="color: #ffffff; font-weight: 800">Consultation</span><br>Allow us to learn about your business needs so we can engineer a solution that best fits your goals.
-          <br><br>3. <span style="color: #ffffff; font-weight: 800">Deployment</span><br> Our team of professional developpers will be hard at work creating and deploying your project, and providing updates along the way.
+          <span style="font-weight: 800">1. Get in Touch</span><br>Book a <span style="font-weight: 800">Free</span> consultation today!
+          <br><br><span style="font-weight: 800">2. Consultation</span><br>Allow us to learn about your business needs so we can engineer a solution that best fits your goals.
+          <br><br><span style="font-weight: 800">3. Deployment</span><br> Our team of professional developpers will be hard at work creating and deploying your solution, and providing updates along the way.
         </p>
         <div class ="generalButtons">
           <button onclick="location.href='book.html'" style="color: #ffd255; font-size:large; border: 3px solid #ffd255; margin-left: -2em;">Book Now ⮞</button>
