--- a/book.html
+++ b/book.html
@@ -59,7 +59,7 @@ created by Tolga Olcay 2024
         <input type="hidden" name="access_key" value="714d9239-a54f-443a-acb6-96761f3d82fe">
 
         <h2>Get in touch</h2>
-        <p>We will get back to promptly.</p>
+        <p>We will get back to you promptly.</p>
 
         <hr>
         <label>Name</label>
