--- a/book.html
+++ b/book.html
@@ -50,7 +50,7 @@ created by Tolga Olcay 2024
     <h1>Book Now</h1>
 
     <p>Booking a consultation allows us to understand the specific needs for your business, and tailor a solution to meet your goals.
-      <br>Our consultations are <span style="font-weight: 800;">100% FREE</span> 
+      <br><br>Our consultations are <span style="font-weight: 800;">100% FREE</span> 
     </p>
 
     <div class="bookContainer">
