--- a/services.html
+++ b/services.html
@@ -47,9 +47,23 @@ created by Tolga Olcay 2024
 
     </div>
     <div class="otherpage">
-    <h1>Services</h1>
+    <h1>Our Services</h1>
+    <h3>Say Good-bye to paperwork!</h3>
+      <p>Our wide range of software solutions [explain how made businesses more efficient and productive, sophisticated system, streamlining their pipeline]</p>
+      <p>picture of runstar app?</p>
+      <br>
+    <h2>App Development</h2>
+    <p>As the scope of your business grows, bottlenecks that slow down the processes bla bla bla, invoicing, paperwork, etc build solutions tailored to business specific 
+      problems, increase effciency productivity etc 50%, bla bla bla designed to be scaleable and adaptable for future iterations as the scope of your businesses grow, futureproofing</p>
+    
+    <h2>SEO</h2>
+    <p>[Explain how good SEO can be advantageous... bla bla bla ] Google Business profile, google rankings, page indexing, picture of google search console graphs?</p>
+    <h2>Web Development</h2>
+    <p>[Why you need a website] professionals who can build from scratch or update existing websites to a modern and professional standard</p>
 
-    <br><br><br><br><br><br><br>
+    <button>Book Now</button>
+
+    <br>
     </div>
   </body>
 
