--- a/about.html
+++ b/about.html
@@ -50,7 +50,15 @@ created by Tolga Olcay 2024
     <div class="otherpage">
     <h1>About</h1>
 
-    <br><br><br><br><br><br><br>
+    <p>Brief explanation of what a software solution company is/does</p>
+    <p>Company goal to create long lasting relationships with our clients</p>
+    <p>A couple sentences explaining that our team is made up of experienced profesionals: developpers, UI/UX, IT professionals, systems architects etc</p>
+    <p>Sentence explaining that we partner with companies of all sizes and work together to find what best fits their scope</p>
+
+    <button>Our services</button>
+    
+
+    <br><br><br>
     </div>
   </body>
 
