--- a/services.html
+++ b/services.html
@@ -48,21 +48,27 @@ created by Tolga Olcay 2024
     </div>
     <div class="otherpage">
     <h1>Our Services</h1>
-    <h3>Say Good-bye to paperwork!</h3>
-      <p>Our wide range of software solutions [explain how made businesses more efficient and productive, sophisticated system, streamlining their pipeline]</p>
-      <p>picture of runstar app?</p>
+    <h3>Say Good-Bye to paperwork!</h3>
+      <p>Instead of spending precious time with invoicing, estimating, inventory Management, and a mountain of paperwork - Invest in growing your business by optimizing your workflow. Nobleware Softworks has a sophistacted system 
+        for identifying bottlenecks withing a business, and creating solutions that bring value to our clients.
+      </p>
+      
       <br>
     <h2>App Development</h2>
-    <p>As the scope of your business grows, bottlenecks that slow down the processes bla bla bla, invoicing, paperwork, etc build solutions tailored to business specific 
-      problems, increase effciency productivity etc 50%, bla bla bla designed to be scaleable and adaptable for future iterations as the scope of your businesses grow, futureproofing</p>
+    <p>As the scope of your business grows, bottlenecks that slow down the processes of your business operations have a severe impact on your revenue. 
+      Our wide range of software solutions have boosted productivity for businesses across Vancouver, by streamlining their business pipeline and increasing productivity by over 50%. 
+      Our solutions are scalable and adaptable for future iterations, so as the scope of your business grows, you can always stay one step ahead in futureproofing your workflow. </p>
     
     <h2>SEO</h2>
-    <p>[Explain how good SEO can be advantageous... bla bla bla ] Google Business profile, google rankings, page indexing, picture of google search console graphs?</p>
+    <p>As industries continue to take advantage of having a web presance, it becomes harder to stand out in the crowded online marketplace. By having good Search Engine Optimization (SEO) your website will 
+      rank higher on search engines like Google, attracting more visitors, boosting your credibility, and turn those visitors to loyal customers, all while maximizing your retern on investment.
+    By optimizing your Google Business Profile, page indexing, keyword quality, and backlinking, we have increased impressions for our clients by over 400%.</p>
     <h2>Web Development</h2>
-    <p>[Why you need a website] professionals who can build from scratch or update existing websites to a modern and professional standard</p>
+    <p>In today's digital landscape, having a website does more than just establishing a brand Identity. It allows you to reach a wider audience and enhance your credibility.  Our team of professional web developpers can build stunning website from scratch with custom domain names, or update existing websites to a modern and professional standard.</p>
 
-    <button>Book Now</button>
-
+    <div class ="generalButtons">
+    <button onclick="location.href='book.html'" style="color: #ffd255; font-size:large; border: 3px solid #ffd255; margin-left: -2em;">Book Now ⮞</button>
+    </div>
     <br>
     </div>
   </body>
