--- a/about.html
+++ b/about.html
@@ -50,13 +50,14 @@ created by Tolga Olcay 2024
     <div class="otherpage">
     <h1>About</h1>
 
-    <p>Brief explanation of what a software solution company is/does</p>
-    <p>Company goal to create long lasting relationships with our clients</p>
-    <p>A couple sentences explaining that our team is made up of experienced profesionals: developpers, UI/UX, IT professionals, systems architects etc</p>
-    <p>Sentence explaining that we partner with companies of all sizes and work together to find what best fits their scope</p>
+    <p>Nobleware Softworks specializes in developing and implementing customized software applications to address specific business needs and improve operational efficiency.</p>
+    <p>We are commited to innovation, customer satisfaction, and establishing long lasting relationships with our clients.</p>
+    <p>Our team is made up of experienced professionals, experienced software engineers, project managers, UX/UI designers, and analysts who bring a wealth of knowledge and expertise to every project.</p>
+    <p>We partner with companies of all sizes to identify and deliver solutions that best fit their unique scope and requirements.</p>
 
-    <button>Our services</button>
-    
+    <div class ="generalButtons">
+    <button onclick="location.href='services.html'" style="margin-left: -2em;">Our Services ⮞</button>
+    </div>
 
     <br><br><br>
     </div>
