--- a/services.html
+++ b/services.html
@@ -49,7 +49,7 @@ created by Tolga Olcay 2024
     <div class="otherpage">
     <h1>Our Services</h1>
     <h3>Say Good-Bye to paperwork!</h3>
-      <p>Instead of spending precious time with invoicing, estimating, inventory Management, and a mountain of paperwork - Invest in growing your business by optimizing your workflow. Nobleware Softworks has a sophistacted system 
+      <p>Instead of spending precious time with invoicing, estimating, inventory Management, and mountains of paperwork - Invest in growing your business by optimizing your workflow. Nobleware Softworks has a sophistacted system 
         for identifying bottlenecks withing a business, and creating solutions that bring value to our clients.
       </p>
       
