--- a/book.html
+++ b/book.html
@@ -49,7 +49,7 @@ created by Tolga Olcay 2024
     <div class="otherpage">
     <h1>Book Now</h1>
 
-    <p>Our consultations are an in depth discussion of your goals and the logistic operations of your business. Booking a consultation allows us to understand the specific needs for your business and tailor a solution according to your goals.
+    <p>Our consultations are an in-depth discussion of your goals and the logistic operations of your business. Booking a consultation allows us to understand the specific needs for your business and tailor a solution according to your goals.
       <br><br>Our consultations are <span style="font-weight: 800;">100% FREE</span> 
     </p>
 
