--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@ created by Tolga Olcay 2024
 
     <p>Nobleware Softworks specializes in developing and implementing customized software applications to address specific business needs and improve operational efficiency.</p>
     <p>We are commited to innovation, customer satisfaction, and establishing long lasting relationships with our clients.</p>
-    <p>Our team is made up of experienced professionals, experienced software engineers, project managers, UX/UI designers, and analysts who bring a wealth of knowledge and expertise to every project.</p>
+    <p>Our team is made up of experienced professionals, software engineers, project managers, UX/UI designers, and analysts who bring a wealth of knowledge and expertise to every project.</p>
     <p>We partner with companies of all sizes to identify and deliver solutions that best fit their unique scope and requirements.</p>
 
     <div class ="generalButtons">
