--- a/services.html
+++ b/services.html
@@ -64,7 +64,7 @@ created by Tolga Olcay 2024
       rank higher on search engines like Google, attracting more visitors, boosting your credibility, and turn those visitors to loyal customers, all while maximizing your retern on investment.
     By optimizing your Google Business Profile, page indexing, keyword quality, and backlinking, we have increased impressions for our clients by over 400%.</p>
     <h2>Web Development</h2>
-    <p>In today's digital landscape, having a website does more than just establishing a brand Identity. It allows you to reach a wider audience and enhance your credibility.  Our team of professional web developpers can build stunning website from scratch with custom domain names, or update existing websites to a modern and professional standard.</p>
+    <p>In today's digital landscape, having a website does more than just establishing a brand Identity. It allows you to reach a wider audience and enhance your credibility as a business.  Our team of professional web developpers can build stunning website from scratch with custom domain names, or update existing websites to a modern and professional standard.</p>
 
     <div class ="generalButtons">
     <button onclick="location.href='book.html'" style="color: #ffd255; font-size:large; border: 3px solid #ffd255; margin-left: -2em;">Book Now ⮞</button>
