--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@ created by Tolga Olcay 2024
     <p>We partner with companies of all sizes to identify and deliver solutions that best fit their unique scope and requirements.</p>
 
     <div class ="generalButtons">
-    <button onclick="location.href='services.html'" style="margin-left: -2em;">Our Services &#x27a4</button>
+    <button onclick="location.href='services.html'" style="margin-left: -2em;">Our Services &#10148</button>
     </div>
 
     <br><br><br>
