--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ created by Tolga Olcay 2024
         
         <h3>About Us</h3>
 
-        <p>As the top software solution company for businesses in British Columbia, we aim to assist in the seamless intergration of technology for local businesses, and create <span style="font-weight: 800">long-lasting bonds</span> with our community.
+        <p>As the top software solution company for businesses in British Columbia, we aim to assist in the seamless integration of technology for local businesses, and create <span style="font-weight: 800">long-lasting bonds</span> with our community.
           Nobleware Softworks has a strong standing in creating meaningful relationships with local businesses, and tackling their problems with software solutions that improve  <span style="font-weight: 800">preformance</span>, <span style="font-weight: 800">growth</span>, and <span style="font-weight: 800">productivity</span></span>.
         </p>
 
