--- a/book.html
+++ b/book.html
@@ -7,6 +7,8 @@ created by Tolga Olcay 2024
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
+    <meta name = "theme-color" content="#0d0e14">
+    
     <title>Nobleware Softworks</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
