--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ created by Tolga Olcay 2024
 
     <section class="hidden generalsec">
       <div class ="general">
-        <img draggable="false" src="../vector1.png">
+        <img draggable="false" src="../solution.svg">
 
         <div class="generalText">
           <h3>Bridging your <span style="color: #ffffff; font-weight: 800">Business</span> with <span style="color: #5b5dff; font-weight: 800">Technology</span></h3>
