--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ created by Tolga Olcay 2024
       </div>
       <div class="quote">
       <p><span style="color: #cfb56c; font-size:xx-large">★★★★★</span></p>
-      <p>"Quote blablablablablabla"</p><p>- Charles Riby-William</p>
+      <p>"Nobleware Softworks developed us a custom app that greatly sped up the time it takes to send out estimates to our clients and reduced the amount of paperwork. They have done a fantastic job communicating and figuring out our needs since day one, and every step of the way!"</p><p>- Charles Riby-William</p>
       </div> 
       </div>
       
