--- a/index.html
+++ b/index.html
@@ -170,14 +170,20 @@ created by Tolga Olcay 2024
     <section class="hidden mobileTest">
       <h1>Testimonials</h1>
       <div class="testi">
-      <div class="company">
-      <img draggable="false" class="runstar" src="../runstar.png">
-      <p>Runstar Moving Services</p>
-      </div>
-      <div class="quote">
-      <p><span style="color: #cfb56c; font-size:xx-large">★★★★★</span></p>
-      <p>"Nobleware Softworks developed us a custom app that greatly sped up the time it takes to send out estimates to our clients. They have done a fantastic job communicating and figuring out our needs since day one, and every step of the way!"</p><p>- Charles Riby-William</p>
-      </div> 
+        <div class="company">
+          <img draggable="false" class="runstar" src="../runstar.png">
+          <p>Runstar Moving Services</p>
+        </div>
+      
+        <div class="quote">
+          <p><span style="color: #cfb56c; font-size:xx-large">★★★★★</span></p>
+
+          <div class="quote2">
+          <p>"Nobleware Softworks developed us a custom app that greatly sped up the time it takes to send out estimates to our clients. They have done a fantastic job communicating and figuring out our needs since day one, and every step of the way!"</p>
+          </div>
+
+          <p>- Charles Riby-William</p>
+        </div> 
       </div>
       
     </section>
