--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@ created by Tolga Olcay 2024
 
     
     <h1>Founder</h1>
-    <img draggable="false" class="portrait" src="../portrait.png">
+    <img draggable="false" class="portrait" src="../portrait.png" style="width:200px">
     <p>Tolga Olcay</p>
     <p>Chief Executive Officer</p>
     <p>Tolga is a White Rock local with years of experience in software design, development, and architecture. 
