--- a/about.html
+++ b/about.html
@@ -62,8 +62,8 @@ created by Tolga Olcay 2024
     </div>
 
     
-    <h1>Founder</h1>
-    <img draggable="false" class="portrait" src="../portrait.png" style="width:200px">
+    <h2>Founder</h2>
+    <img draggable="false" class="portrait" src="../portrait.png" style="width:250px;">
     <p>Tolga Olcay</p>
     <p>Chief Executive Officer</p>
     <p>Tolga is a White Rock local with years of experience in software design, development, and architecture. 
