--- a/services.html
+++ b/services.html
@@ -93,7 +93,7 @@ created by Tolga Olcay 2024
     <ul>
       <li><a href="https://www.linkedin.com/in/tolga-olcay-81aa63274/"><img src="LinkedIn.png"></a></li>
       <li><a href="tel:604-309-0249">(604)-309-0249</a></li>
-      <li><a href="mailto:noblewaresoftworks@gmail.com?subject=Hello%20there&body=I%20wanted%20to%20reach%20out%20to%20you.">noblewaresoftworks@gmail.com</a></li>
+      <li><a href="mailto:info@noblewaresoftworks.com?subject=Hello%20there&body=I%20wanted%20to%20reach%20out%20to%20you.">info@noblewaresoftworks.com</a></li>
     </ul>
 
     <br>
