--- a/services.html
+++ b/services.html
@@ -51,8 +51,8 @@ created by Tolga Olcay 2024
     <div class="otherpage">
     <h1>Our Services</h1>
     <h3>Say Good-Bye to paperwork!</h3>
-      <p>Instead of spending precious time with invoicing, estimating, inventory Management, and mountains of paperwork - Invest in growing your business by optimizing your workflow. Nobleware Softworks has a sophistacted system 
-        for identifying bottlenecks withing a business, and creating solutions that bring value to our clients.
+      <p>Instead of spending precious time with invoicing, estimating, inventory Management, and mountains of paperwork - Invest in growing your business by optimizing your workflow. Nobleware Softworks has a sophisticated system 
+        for identifying bottlenecks within a business, and creating solutions that bring value to our clients.
       </p>
       
       <br>
@@ -62,11 +62,11 @@ created by Tolga Olcay 2024
       Our solutions are scalable and adaptable for future iterations, so as the scope of your business grows, you can always stay one step ahead in futureproofing your workflow. </p>
     
     <h2>SEO</h2>
-    <p>As industries continue to take advantage of having a web presance, it becomes harder to stand out in the crowded online marketplace. By having good Search Engine Optimization (SEO) your website will 
+    <p>As industries continue to take advantage of having a web presence, it becomes harder to stand out in the crowded online marketplace. By having good Search Engine Optimization (SEO) your website will 
       rank higher on search engines like Google, attracting more visitors, and turning those visitors to loyal customers, all while maximizing your return on investment.
     By optimizing your Google Business Profile, page indexing, keyword quality, and backlinking, we have increased impressions for our clients by over 400%.</p>
     <h2>Web Development</h2>
-    <p>In today's digital landscape, having a website does more than just establishing a brand Identity. It allows you to reach a wider audience and enhance your credibility as a business.  Our team of professional web developpers can build stunning website from scratch with custom domain names, or update existing websites to a modern and professional standard.</p>
+    <p>In today's digital landscape, having a website does more than just establishing a brand Identity. It allows you to reach a wider audience and enhance your credibility as a business.  Our team of professional web developpers can build stunning websites from scratch with custom domain names, or update existing websites to a modern and professional standard.</p>
 
     <div class ="generalButtons">
     <button onclick="location.href='book.html'" style="color: #ffd255; font-size:large; border: 3px solid #ffd255; margin-left: -2em;">Book Now &#10148</button>
