--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@ created by Tolga Olcay 2024
     <h2>Founder</h2>
     <img draggable="false" class="portrait" src="../portrait.png" style="width:250px;">
     <p>Tolga Olcay</p>
-    <p>Chief Executive Officer</p>
+    <p>President</p>
     <p>Tolga is a White Rock local with years of experience in software design, development, and architecture. 
       With his passion of computer science, Tolga founded Nobleware Softworks with the goal of creating software that is truly - noble.
       Under his care, Nobleware Softworks continues to pursue in creating meaningful relationships with businesses in his community.</p>
