--- a/index.html
+++ b/index.html
@@ -76,6 +76,31 @@ created by Tolga Olcay 2024
 
     </section>
 
+    <section>
+      <div class="hand">
+      <div class="quad hidden">
+        
+        <a href="services.html#appDev" class="card">
+          Applications
+          <img src="app.png">
+        </a>
+        <a href="services.html#SEO" class="card">
+          SEO
+          <img src="seo.png" >
+        </a>
+        <a href="services.html#webDev" class="card">
+          Websites
+          <img src="web.png">
+        </a>
+        <a href="book.html" class="card">
+          Free Consultation
+          <img src="book.png">
+        </a>
+
+      </div></div>
+
+    </section>
+
     <section class="hidden">
 
       <div class="wrapper">
