--- a/services.html
+++ b/services.html
@@ -48,7 +48,7 @@ created by Tolga Olcay 2024
       </div>
 
     </div>
-    <div class="otherpage">
+    <div class="otherpage" id="appDev">
     <h1>Our Services</h1>
     <h3>Say Good-Bye to paperwork!</h3>
       <p>Instead of spending precious time with invoicing, estimating, inventory Management, and mountains of paperwork - Invest in growing your business by optimizing your workflow. Nobleware Softworks has a sophisticated system 
@@ -56,12 +56,12 @@ created by Tolga Olcay 2024
       </p>
       
       <br>
-    <h2>App Development</h2>
+    <h2 id="SEO">App Development</h2>
     <p>As the scope of your business grows, bottlenecks that slow down the processes of your business operations have a severe impact on your revenue. 
       Our wide range of software solutions have boosted productivity for businesses across Vancouver, by streamlining their business pipeline and increasing productivity by over 50%. 
       Our solutions are scalable and adaptable for future iterations, so as the scope of your business grows, you can always stay one step ahead in futureproofing your workflow. </p>
     
-    <h2>SEO</h2>
+    <h2 id="webDev">SEO</h2>
     <p>As industries continue to take advantage of having a web presence, it becomes harder to stand out in the crowded online marketplace. By having good Search Engine Optimization (SEO) your website will 
       rank higher on search engines like Google, attracting more visitors, and turning those visitors to loyal customers, all while maximizing your return on investment.
     By optimizing your Google Business Profile, page indexing, keyword quality, and backlinking, we have increased impressions for our clients by over 400%.</p>
