--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ created by Tolga Olcay 2024
         </div>
               <div class ="generalButtons">
         
-              <button onclick="location.href='book.html'" style="color: #ffd255; background-color: #5b5eff00; font-size:x-large; border: 5px solid #ffd255; text-shadow: 5px 5px 15px rgb(0, 0, 0); box-shadow: 5px 5px 7px rgb(0, 0, 0);">Explore Solutions</button>
+              <button onclick="location.href='services.html'" style="color: #ffd255; background-color: #5b5eff00; font-size:x-large; border: 5px solid #ffd255; text-shadow: 5px 5px 15px rgb(0, 0, 0); box-shadow: 5px 5px 7px rgb(0, 0, 0);">Explore Solutions</button>
             </div>
       
       </div>
