--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ created by Tolga Olcay 2024
       <div class="fixedImg">
         <h1>What we can <span style="color: #5b5dff;">help</span> you with</h1>
         <div class="imgRow">
-          <div class="imgColumn"><h1>100's</h1><h2>of hours saved on paperwork and administration</h2></div>
+          <div class="imgColumn"><h1>100's</h1><h2>of hours saved on paperwork and productivity</h2></div>
           <div class="imgColumn"><h1>50%</h1><h2>increase in effciency and administration</h2></div>
           <div class="imgColumn"><h1>4x</h1><h2>Growth in online web presance</h2></div>
           <div class="imgColumn"><h1>$</h1><h2>Building Solutions that bring value to your company</h2></div>
