--- a/services.html
+++ b/services.html
@@ -48,7 +48,7 @@ created by Tolga Olcay 2024
       </div>
 
     </div>
-    <div class="otherpage" id="appDev">
+    <div class="otherpage">
     <div>
     <h1>Our Services</h1>
     <h3>Say Good-Bye to paperwork!</h3>
@@ -59,11 +59,11 @@ created by Tolga Olcay 2024
         <div class ="generalButtons">
           <button onclick="location.href='book.html'" style="color: #ffd255; font-size:large; border: 3px solid #ffd255; margin-left: -2em;">Book Now &#10148</button>
         </div>
-      <br><br><br>
+      <br id="appDev"><br><br>
     </div>  
 
     <div>
-    <h2 id="SEO">App Development</h2>
+    <h2>App Development</h2>
     <p>As the scope of your business grows, bottlenecks that slow down the processes of your business operations have a severe impact on your revenue. 
       Our wide range of software solutions have boosted productivity for businesses across Vancouver, by streamlining their business pipeline and increasing productivity by over 50%. 
       Our solutions are scalable and adaptable for future iterations, so as the scope of your business grows, you can always stay one step ahead in futureproofing your workflow. </p>
@@ -72,14 +72,14 @@ created by Tolga Olcay 2024
         <div class ="generalButtons">
           <button onclick="location.href='book.html'" style=" font-size:large; border: 3px solid; margin-left: -2em;">Get Started &#10148</button>
         </div>
-        <br><br><br>
+        <br id="SEO"><br><br>
 
     </div>
 
     <div>
 
     
-    <h2 id="webDev">SEO</h2>
+    <h2>SEO</h2>
     <p>As industries continue to take advantage of having a web presence, it becomes harder to stand out in the crowded online marketplace. By having good Search Engine Optimization (SEO) your website will 
       rank higher on search engines like Google, attracting more visitors, and turning those visitors to loyal customers, all while maximizing your return on investment.
     By optimizing your Google Business Profile, page indexing, keyword quality, and backlinking, we have increased impressions for our clients by over 400%.</p>
@@ -87,7 +87,7 @@ created by Tolga Olcay 2024
         <div class ="generalButtons">
           <button onclick="location.href='book.html'" style=" font-size:large; border: 3px solid; margin-left: -2em;">Get Started &#10148</button>
         </div>
-        <br><br><br>
+        <br id="webDev"><br><br>
     </div>
 
     <div>
