--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ created by Tolga Olcay 2024
           <p><span style="color: #cfb56c; font-size:xx-large">★★★★★</span></p>
 
           <div class="quote2">
-          <p>"Nobleware Softworks developed us a custom app that greatly sped up the time it takes to send out estimates to our clients. They have done a fantastic job communicating and figuring out our needs since day one, and every step of the way!"</p>
+          <p>"Over the past two years, Nobleware has created two custom applications for our company. The first app was designed to streamline our estimating system, enabling us to provide accurate quotes to clients within minutes. This innovation has greatly improved our efficiency and client experience. More recently, Nobleware has developed a daily truck checklist app that allows our crews to easily track tools and supplies, ensuring smooth operations and adding significant value to our business."</p>
           </div>
 
           <p>- Charles Riby-William</p>
