--- a/about.html
+++ b/about.html
@@ -54,10 +54,10 @@ created by Tolga Olcay 2024
     <div>
     <h1>About</h1>
 
-    <p>Nobleware Softworks specializes in developing and implementing customized software applications to address specific business needs and improve operational efficiency. Since 2024 we have been providing our services to local business in Vancouver, and the lower mainland.</p>
-    <p>We are commited to innovation, customer satisfaction, and establishing long lasting relationships with our clients.</p>
-    <p>Our team is made up of experienced professionals, software engineers, project managers, UX/UI designers, and analysts who bring a wealth of knowledge and expertise to every project.</p>
-    <p>We partner with companies of all sizes to identify and deliver solutions that best fit their unique scope and requirements.</p>
+    <p>Nobleware Softworks specializes in developing and implementing customized software applications to address specific business needs and improve operational efficiency. Since 2024 we have been providing our services to local business in Vancouver, and the lower mainland. Our team is made up of experienced professionals, software engineers, project managers, UX/UI designers, and analysts who bring a wealth of knowledge and expertise to every project.</p>
+
+    
+    <p>Nobleware partners with companies of all sizes, identifying and delivering solutions that best fit their unique scope and requirements. We are commited to innovation, customer satisfaction, and establishing long lasting relationships with our clients.</p>
       
     <div class ="generalButtons">
     <button onclick="location.href='services.html'" style="margin-left: -2em;">Our Services &#10148</button>
